Fix LCP on mobile with fixed header height

--- a/web/wp-content/themes/lf-theme/source/scss/components/_header.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/components/_header.scss
@@ -8,6 +8,8 @@
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
         0 3px 6px rgba(0, 0, 0, 0.23);
     background-color: $menu-desktop-container;
+    display: flex;
+    align-content: center;
 
     >.container-full-width {
         display: flex;
@@ -27,8 +29,6 @@
 }
 
 .logo {
-    margin-top: 20px;
-    margin-bottom: 20px;
     width: 180px;
     flex-shrink: 0;
 
@@ -64,6 +64,10 @@
 
 @media (max-width: 999px),
 (min-width: 0px) and (max-height: 699px) {
+
+    .site-header {
+        height: 76px;
+    }
 
     .hamburger {
         display: inline-block;
